app/styles/main.scss
/* ... */
.browserupgrade {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}
textarea {
  outline: none; // remove blue glow
  overflow: auto; // remove IE scrollbars
}
/* Placeholer text color */
::-webkit-input-placeholder {
  color: silver;
}
:-moz-placeholder { /* Firefox 18- */
  color: silver;
}
::-moz-placeholder {  /* Firefox 19+ */
  color: silver;
}
:-ms-input-placeholder {
  color: silver;
}

/**************************************
 Helper Classes
 **************************************/
.table,
.table-cell {
    width: 100%;
    height: 100%;
}
.table {
    display: table;
}
.table-row {
  display: table-row;
}
.table-cell {
    display: table-cell;
    vertical-align: middle;
}
.anchor-scroll-tag {
  display: block;
  padding-top: $nav-height;
  margin-top: -$nav-height;
}
.div-frame-outer {
  display: table;
  border: 3px solid $white;
  padding: 3px;
  width: 100%;

  .div-frame-inner {
    display:table-cell;
    vertical-align: middle;
    text-align: center;
    background: $white;
  }
}

/**************************************
 Skrollr Parallax Helper Classes
 **************************************/
 #skrollr-body {
  // background: url("../images/wood-bg.jpg") repeat-x left top;
  // height: 100%;
}
.skrollr-window {
    position: relative;
    width: 100% !important;
    overflow: hidden;
}
.skrollr-layer {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;

  img {
    width: 100%;
  }
}

/**************************************
 App Styles
 **************************************/
nav#nav-outer {
  width: 100%;
  position: fixed;
  height: $nav-height;
  z-index: 1;
  background: url("../images/nav-bg.png");
  background-repeat: no-repeat;
  background-size: 101% 100%;
  background-position: center center;
  background-color: #404040;

  #nav-inner {
    margin: 0 auto;
    min-width: 760px;
    width: 58%;
    height: 100%;
/*
    #logo  {
      width: 10px;

      img {
        position: relative;
        top: 1px;
        vertical-align: middle;
      }
    } */

    ul.table {
      width: 50%;
      margin: 0 auto;
      border-collapse: separate;
      border-spacing: 20px;
      vertical-align: middle;

      li {
      vertical-align: middle;
        min-width: 110px;
        width: 33.33%;
        margin: 0 3px;

        span {
          display: block;
          padding: 2px 4px;
          // transparent border to stop text
          // from shifting upon hover state
          border: 3px solid transparent;
          @include transition (border-color 0.5s);
        }
        &:hover span {
          border-color: rgba(118, 101, 85, 1);
          @include transition (border 0.6s);
        }
      }
    }
  }
}

.skrollr-body {
  display: block;
}
#hero-section {
  position: relative;
  padding-top: 75%;

  #home-bg-con {
    background: url(../images/home-bg.jpg) no-repeat center center;
    background-size: 100% 100%;
    height: 100%;
    width: 100%
  }
  #tag-line-con {
    background: url(../images/tag-line2.png) no-repeat center center;
    background-size: 100%;
  }
  #couple-con {
    background: url(../images/couple.png) no-repeat top left;
    background-size: 28%;
  }
}

#services-banner {
  @include fixed-wood-bg();
  position: relative;
  min-height: 500px;

  .thin-white-bar-top {
    @include thin-white-bar(0 0 30px 0);
  }
  .thin-white-bar-bottom {
    @include thin-white-bar(0);
  }
  h2 {
    color: transparent;
    text-indent: -5000px;
    background: url(../images/services-header.png) no-repeat center;
    background-size: 450px;
    height: 110px;
  }
  ul {
    min-width: 490px;
    width: 40%;
    overflow: hidden;
    margin: 0 auto 75px;

    li {
      float: left;
      width: 50%;
      padding: 10px 10px;

      .div-frame-outer {
        .div-frame-inner {
          background: url(../images/service-link-bg.png) no-repeat center;
          height: 75px;

          h3 {
            padding: 0 10px;
            width: 100%;
            @include font-size(18);

            font-weight: 700;
            text-transform: uppercase;

            a:hover {
              color: $dark-brown;
            }
          }
        }
      }
    }
  }
}

#about-us-section {
  @include white-wood-bg(left, top);
  border-bottom: 5px solid $dark-brown;

  .about-us-outer {
    width: 320px;
    margin: 0 auto 10px;
    padding: 0 20px;

    .about-us-inner {
      text-align: center;
      vertical-align: middle;

      h2 {
        padding: 20px 0;
        @include font-size($home-h2);
      }
      p {
        font-family: 'Bodini MT';
        @include font-size(13);
        font-weight: bold;
        text-align: left;
        padding-bottom: 20px;
      }
    }
  }
}
/* ... */

